2010-06-07 Josef Cacek
  * fixed reading of X.509 KeyUsage extension
  * rendering library Apache PDFBox replaced by Sun PdfRenderer (LGPL)
  * CRL estimated size   

2010-06-02 Josef Cacek
  * proxy support for TSA, OCSP and CRL
  * centering windows

2010-05-23 Josef Cacek
  * support for BouncyCastle keystore providers
  * possibility to choose hash algorithm

2010-05-19 Josef Cacek
  * added multiline support for signature text (L2)
  * translation friendly default signature text (L2)
  * added CRL support
  * preview and/or select by mouse visible signature (using PdfBox to convert PDF page to image)

2010-05-16 Josef Cacek
  * fixed handling of multiple-signatures in non-append mode (old signatures are correctly removed now)
  * fix for Unicode in PDF-producer field
  * started using own branch of iText library based on version 2.1.7 (new name: JSignPdf-itxt)
  * fixed handling of empty Output PDF field (it was filled after application restart)

2010-04-26 Josef Cacek & Marcus Schoeller
  * listing/reloading keys checks certificate validity and KeyUsage attributes (it's still possible 
    to sign with another private key, but you have to provide the correct alias by hand!) 

2010-04-14 Josef Cacek
  * implemented minimal PDF version for visible signature - 1.3 (not used in append-mode) 

2010-04-12 Josef Cacek
  * suffix can be empty in batch mode (output to different directory with the same filename)
  * additional file-checks in SignerLogic class

2010-04-02 Josef Cacek
  * set default buttons for dialogs

2010-04-01 Josef Cacek
  * fixed password usage in a simple view
  * check if keystore is loaded during key refresh
  * if the name of output file is not filled, automatically is used "_signed" suffix. E.g. test.pdf->test_signed.pdf
  * set default buttons for dialogs

2010-03-04 Josef Cacek
  * command line switches for TSA & OCSP

2010-02-24 Josef Cacek
  * documentation update

2009-11-07 Josef Cacek
  * Bouncy castle libraries upgrade (143->144)