@@ -27,6 +27,8 @@
 	<property name="jsignpdf.product.name" value="JSignPdf" />
 	<property name="jsignpdf.filename" value="${jsignpdf.product.name}" />
 
+	<property name="installcert.filename" value="InstallCert" />
+
 	<!-- Default options for compiling -->
 	<property name="compile.deprecation" value="false" />
 	<property name="compile.debug" value="true" />
