@@ -56,7 +56,8 @@ default.l2text.location = Location:
 default.l2text.reason   = Reason:
 default.l2text.signedBy = Digitally signed by
 
-error.keystoreNull = Keystore was not loaded succesfully. Check if the keystore type, path and password are valid.
+error.keystoreNull          = Keystore was not loaded succesfully. Check if the keystore type, path and password are valid.
+error.sslHandshakeException = SSL connection failed - the certificate of the server is probably not known. You can use InstallCert Tool to import the Certificate to Java Keystore.
 
 file.notReadable               = File {0} is not readable by the application. Check if the file exists and the user has read right.
 
