@@ -57,7 +57,8 @@ default.l2text.location = M\u00EDsto:
 default.l2text.reason   = D\u016Fvod:
 default.l2text.signedBy = Elektronicky podepsal(a)
 
-error.keystoreNull = \u00DAlo\u017Ei\u0161t\u011B kl\u00ED\u010D\u016F nebylo na\u010Dteno korektn\u011B. Zkontrolujte, zda typ, cesta a heslo k \u00FAlo\u017Ei\u0161ti jsou vypln\u011Bny spr\u00E1vn\u011B.
+error.keystoreNull          = \u00DAlo\u017Ei\u0161t\u011B kl\u00ED\u010D\u016F nebylo na\u010Dteno korektn\u011B. Zkontrolujte, zda typ, cesta a heslo k \u00FAlo\u017Ei\u0161ti jsou vypln\u011Bny spr\u00E1vn\u011B.
+error.sslHandshakeException = SSL spojen\u00ED selhalo. Certifk\u00E1t serveru pravd\u011Bpodobn\u011B nen\u00ED zn\u00E1m\u00FD. M\u016F\u017Eete pou\u017E\u00EDt program InstallCert Tool k importu serverov\u00E9ho certifik\u00E1tu do v\u00FDchoz\u00EDho \u00FAlo\u017Ei\u0161t\u011B kl\u00ED\u010D\u016F v Jav\u011B.
 
 filechooser.overwrite.question = Soubor "{0}" ji\u017E existuje. Chcete jej p\u0159epsat?
 filechooser.save.warning       = Varov\u00E1n\u00ED
