@@ -36,6 +36,8 @@ console.setVisibleSignature   = Erzeuge visuelle Signatur
 console.starting              = Starte PDF Signierer
 console.usedKeyAlias          = Verwendet Schl\u00FCssel: {0}
 
+default.l2text.signedBy = Digital unterschrieben von
+
 filechooser.overwrite.question = Datei "{0}" existiert bereits. Wollen Sie sie \u00FCberschreiben?
 filechooser.save.warning       = Speichern - Warnung
 
